@@ -26,7 +26,11 @@ public class GroupServiceImpl implements GroupService {
 
     @Override
     public Group createGroup(GroupDTO groupDTO) {
-        Language language = languageRepository.findAllByName(groupDTO.getLanguage().getName()).get(0);
+        Language language = languageRepository.findAllByName(groupDTO.getLanguage().getName()).getFirst();
+
+        if(language == null){
+            language = languageRepository.findAll().getFirst();
+        }
 
         Group group = new Group();
         group.setDescription(groupDTO.getDescription());
@@ -39,7 +43,11 @@ public class GroupServiceImpl implements GroupService {
 
     @Override
     public Group editGroup(GroupDTO groupDTO, Long groupId) {
-        Language language = languageRepository.findAllByName(groupDTO.getLanguage().getName()).get(0);
+        Language language = languageRepository.findAllByName(groupDTO.getLanguage().getName()).getFirst();
+
+        if(language == null){
+            language = languageRepository.findAll().getFirst();
+        }
 
         Group group = new Group();
         group.setId(groupId);
@@ -82,13 +90,13 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public Group addStudentToGroup(Long groupId, Long studentId) {
+    public Group addUserToGroup(Long groupId, Long studentId) {
 
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new NoSuchElementException("Group not found"));
 
         User student = userRepository.findById(studentId)
-                .orElseThrow(() -> new NoSuchElementException("Student not found"));
+                .orElseThrow(() -> new NoSuchElementException("User not found"));
 
         group.getUsers().add(student);
         student.getGroups().add(group);
@@ -97,7 +105,7 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public Group removeStudentFromGroup(Long groupId, Long studentId) {
+    public Group removeUserFromGroup(Long groupId, Long studentId) {
 
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new NoSuchElementException("Group not found"));
